src/css/site.css
/* ... */
.lr-icon-gradient::before {
  content: "";
  background: url("../images/arrow-right-action.svg") no-repeat;
  background-position: center;
  width: 20px;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

/* .lr-icon-gradient:hover:before {
  background: url("../images/arrow-right-seagreen-o.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
} */

.seeall-icon {
  color: #6e6ea4;
}
.seeall-icon:hover {
  color: #1a1368;
}

.seeall-icon::before {
  content: "";
  background: url("../images/seeall-arrow-right.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

.seeall-icon:hover:before {
  background: url("../images/seeall-arrow-right-active.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

/*
.seeall-icon a {
  color: #6e6ea4;
}
.seeall-icon::before,
.seeall-icon:hover:before {
  background: url("../images/seeall-arrow-right.svg") no-repeat;
  padding: 0px 0px 3px 20px;
}
.action-icon::before,
.action-icon:hover:before {
  background: url("../images/arrow-right-action.svg") no-repeat;
  padding: 0px 0px 3px 20px;
} */

.iframe-container {
  position: relative;
  width: 100%;
}
.video {
  border-radius: 12px;
  z-index: 30;
}

.stack-frame-1 {
  background: linear-gradient(233.82deg, #86a4c8 -2.93%, #714d92 34.63%);
  border-radius: 16px;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 16px;
  left: 16px;
  z-index: 20;
}
.stack-frame-2 {
  background: linear-gradient(158.36deg, #714d92 -0.5%, #86a4c8 72.97%);
  border-radius: 16px;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 32px;
  left: 32px;
  z-index: 10;
}

/* .product-media {
  position: absolute;
  top: 21px;
  left: 72px;
  width: 76%;
  height: 86%;
  border-radius: 12px;
  z-index: 30;
} */
/* .product-media {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  padding-left: 70px;
  padding-right: 88px;
  padding-top: 20px;
  padding-bottom: 29px;
  z-index: 20;
} */
.product-media {
  /* position: absolute;
  height: 100%;
  left: 60px; */
  /* border-radius: 12px;
  padding-left: 10%;
  padding-right: 12%;
  padding-top: 3%;
  padding-bottom: 4%; */
  width: 100%;
  z-index: 20;
}

.product-banner-frame {
  background: url("../images/product-list-bg.png") no-repeat;
  background-position: center;
  background-size: contain;
  border-radius: 16px;
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 20;
}
.post-arrow::after {
  content: "";
  background: url("../images/short_right.png") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-left: 5px;
}
.bnr-right-icon::before {
  content: "";
  background: url("../images/long-arrow.png") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}
.tab-content-item h3 {
  font-size: 28px;
  line-height: 140%;
  color: #fff;
  font-weight: bold;
  margin-bottom: 16px;
}
.tab-content-item p {
  font-size: 18px;
  line-height: 160%;
  color: #fff !important;
  margin-bottom: 24px;
}

.tab-content-item a:hover {
  color: #00cbcc !important;
}
.tab-content-item a:hover:before {
  content: "";
  background: url("../images/arrow-right-seagreen-o.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

.tab-content-item a {
  color: #96f3f7 !important;
  text-decoration: none !important;
}
.tab-content-item a::before {
  content: "";
  background: url("../images/arrow-right-action.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

/* .action-icon a::before,
.action-icon a:hover::before {
  background: url("../images/arrow-right-action.svg") no-repeat;
  padding: 0px 0px 3px 20px;
} */
.tab-content-item a {
  font-size: 14px;
  line-height: 140%;
  font-weight: bold;
  color: #000000;
}
.frtxt-contnt h2 {
  line-height: 46px !important;
}
.frtxt-contnt p {
  margin-bottom: 2rem;
}
.frtxt-contnt p:last-of-type {
  margin-bottom: 25px;
}
.leftrightimgcontent-items .frtxt-contnt p:last-of-type {
  margin-bottom: 0px;
}
.gradient-disable .frtxt-contnt p, .gradient-disable .frtxt-contnt li{
  @apply text-grayColor-custom
}
.hero-section .agreement-description p{
  @apply text-darkScheme-textPrimary;
}
.hero-content p {
  color: #17176e;
  font-size: 22px;
  line-height: 160%;
  max-width: 75%;
}

.demo-header {
  /* background: #6b96c3;
    background: -moz-linear-gradient(left, #6b96c3 0%, #111168 100%);
    background: -webkit-linear-gradient(left, #6b96c3 0%, #111168 100%);
    background: linear-gradient(to right, #6b96c3 0%, #111168 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b96c3', endColorstr='#111168',GradientType=1 );  */
  height: 428px;
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
  background-repeat: no-repeat;
}

.demo-header-bg {
  background-image: url("../images/demo-background.png");
  background-position: bottom right;
  background-size: 640px auto;
  background-repeat: no-repeat;
}

.demo_form {
  background: #ffffff;
  mix-blend-mode: normal;
  border: 1px solid #e1e1e1;
  box-sizing: border-box;
  box-shadow: 0px 16px 40px -3px rgba(0, 0, 0, 0.05);
  border-radius: 12px;
  position: relative;
  /* width: 470px; */
}
.demo_form input {
  height: 40px;
  color: #4e4e4e;
  background: #ffffff;
  border: 1px solid #a7a7a7;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
  border-radius: 8px;
  /* margin-bottom: 24px; */
  padding: 9px 16px;
}
/* ... */

